<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">討海人</string>
    <string name="layer">Layer</string>
    <string name="my_route">我的軌跡</string>
    <string name="economy_sea">經濟海域</string>
    <string name="marine_sanctuary">海洋保護區</string>
    <string name="port">港口資訊</string>
    <string name="fish_distribution">漁獲分佈</string>
    <string name="check_rule">看法規</string>
    <string name="back_to_map">回到地圖</string>
    <string name="you_are_in_sanctuary">您已進入%s，此區禁止流刺網與底拖網</string>
    <string name="current_location">目前位置：%f%s %f%s</string>
    <string name="fish_catch_info">開始時間：%s\n結束時間：%s\n總時數：%s 小時\n漁獲量：%.2f kg\n漁獲率：%.2f kg/hr</string>
    <string name="add_task">New TO-DO</string>
    <string name="edit_task">Edit TO-DO</string>
    <string name="task_marked_complete">Task marked complete</string>
    <string name="task_marked_active">Task marked active</string>
    <string name="loading_tasks_error">Error while loading tasks</string>
    <string name="completed_tasks_cleared">Completed tasks cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_task">Delete task</string>
    <string name="navigation_view_header_title">TO-DOs</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter your TO-DO here.</string>
    <string name="empty_task_message">TO DOs cannot be empty</string>
    <string name="successfully_saved_task_message">TO-DO saved</string>
    <string name="list_title">TO-DO List</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_tasks">You have no tasks.</string>
    <string name="statistics_active_tasks">Active tasks:</string>
    <string name="statistics_completed_tasks">Completed tasks:</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>

    <string-array name="list_tasks_array">
        <item>@string/nav_all</item>
        <item>@string/nav_active</item>
        <item>@string/nav_completed</item>
    </string-array>
    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_completed">Completed</string>
    <string name="label_all">All TO-DOs</string>
    <string name="label_active">Active TO-DOs</string>
    <string name="label_completed">Completed TO-DOs</string>
    <string name="no_tasks_all">You have no TO-DOs!</string>
    <string name="no_tasks_active">You have no active TO-DOs!</string>
    <string name="no_tasks_completed">You have no completed TO-DOs!</string>
    <string name="no_tasks_add">Add a TO-DO item +</string>
    <string name="refresh">Refresh</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>


    <string name="map">地圖</string>
    <string name="law">法規</string>
    <string name="fish_record">漁獲紀錄</string>
    <string name="track">航跡</string>
    <string name="setting">設定</string>
    <string name="about">關於</string>
    <string name="search_location">搜尋地點</string>
    <string name="start_time">起始時間</string>
    <string name="working_location">作業地點</string>
    <string name="catch_fish">漁獲量</string>
    <string name="takes_time">總作業時間</string>
    <string name="location">%f%s %f%s</string>
    
    <string-array name="fishCatch">
        <item>t</item>
        <item>kg</item>
    </string-array>

    <string-array name="time">
        <item>min</item>
        <item>hr</item>
    </string-array>

</resources>
