<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Toolbar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <FrameLayout
            android:id="@+id/contentFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar" />

        <LinearLayout
            android:id="@+id/switch_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/toolbar"
            android:layout_marginTop="@dimen/switch_panel_top_margin"
            android:background="@android:color/white"
            android:gravity="end"
            android:orientation="vertical"
            android:padding="@dimen/switch_panel_padding">

            <Switch
                android:id="@+id/switch_my_route"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchPadding="@dimen/switch_padding"
                android:text="@string/my_route" />

            <Switch
                android:id="@+id/switch_economy_sea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchPadding="@dimen/switch_padding"
                android:text="@string/economy_sea" />

            <Switch
                android:id="@+id/switch_marine_sanctuary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchPadding="@dimen/switch_padding"
                android:text="@string/marine_sanctuary" />

            <Switch
                android:id="@+id/switch_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchPadding="@dimen/switch_padding"
                android:text="@string/port" />

            <Switch
                android:id="@+id/switch_fish_distribution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:switchPadding="@dimen/switch_padding"
                android:text="@string/fish_distribution" />

        </LinearLayout>

    </RelativeLayout>

    <!-- Navigation Drawer -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_actions" />

</android.support.v4.widget.DrawerLayout>