<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="10dp">

  <TextView
    android:id="@+id/tv_startTime"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/start_time"
    android:textColor="@android:color/black"
    android:textSize="20dp"
    android:textStyle="bold"/>

  <TextView
    android:id="@+id/time"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="YYYY/MM/DD hh:mm:ss"
    android:layout_toRightOf="@+id/tv_startTime"
    android:layout_marginLeft="10dp"
    android:maxLines="1"
    android:textColor="@android:color/black"
    android:textSize="20dp"/>

  <TextView
    android:id="@+id/tv_workLoc"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/working_location"
    android:layout_below="@+id/tv_startTime"
    android:textColor="@android:color/black"
    android:textSize="20dp"
    android:textStyle="bold"/>

  <TextView
    android:id="@+id/location"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="XXX.XXXXE YYY.YYYYN"
    android:layout_toRightOf="@id/tv_workLoc"
    android:layout_below="@+id/time"
    android:maxLines="1"
    android:layout_marginLeft="10dp"
    android:textColor="@android:color/black"
    android:textSize="15dp"/>

  <TextView
    android:id="@+id/tv_fishCatch"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/catch_fish"
    android:layout_below="@+id/tv_workLoc"
    android:textColor="@android:color/black"
    android:textSize="20dp"
    android:textStyle="bold"/>

  <android.support.v7.widget.AppCompatSpinner
    android:id="@+id/weight_spinner"
    android:layout_width="100dp"
    android:layout_height="30dp"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/location" />

  <EditText
    android:id="@+id/et_fishCatch"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="100dp"
    android:layout_alignBottom="@+id/tv_fishCatch"
    android:layout_toRightOf="@+id/tv_fishCatch"
    android:inputType="number"
    android:singleLine="true" />

  <TextView
    android:id="@+id/tv_takeTime"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/takes_time"
    android:layout_below="@+id/tv_fishCatch"
    android:textColor="@android:color/black"
    android:textSize="20dp"
    android:textStyle="bold"/>

  <EditText
    android:id="@+id/et_num"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="100dp"
    android:layout_alignBottom="@+id/tv_takeTime"
    android:layout_toEndOf="@+id/tv_takeTime"
    android:layout_toRightOf="@+id/tv_takeTime"
    android:inputType="number" />

  <android.support.v7.widget.AppCompatSpinner
    android:id="@+id/time_spinner"
    android:layout_width="100dp"
    android:layout_height="30dp"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/weight_spinner" />

  <Button
    android:id="@+id/btn_cancel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="71dp"
    android:layout_alignEnd="@+id/time"
    android:layout_alignRight="@+id/time"
    android:layout_below="@+id/time_spinner"
    android:text="取消" />
  <Button
    android:id="@+id/btn_save"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/btn_cancel"
    android:layout_alignBottom="@+id/btn_cancel"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:text="儲存" />
</RelativeLayout>